--- a/table.html
+++ b/table.html
@@ -3,61 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>table</title>
-    <style>
-      td{
-        border: 1px solid black;
-        padding: 5px 10px;
-      }
-      table{
-        border-collapse: collapse;
-      }
-      th{
-        border: 2px solid black;
-      }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Html Table</h1>
-    <table>
-      <caption>Employe sallary data</caption>
-        <thead>
-          <th>Nmbr</th>
-          <th>Name</th> 
-          <th>Compa</th>
-          <th>Sallary</th>
-          <tr>
-            <td>01</td>
-            <td>bill gates</td>
-            <td>microsoft</td>
-            <td>$1000</td>
-          </tr>
-          <tr>
-            <td>02</td>
-            <td>zakerbark</td>
-            <td>facebook</td>
-            <td>$1200</td>
-          </tr>
-          <tr>
-            <td>03</td>
-            <td>steve jobs</td>
-            <td>apple</td>
-            <td>$1200</td>
-          </tr>
-          <tr>
-            <td>04</td>
-            <td>larry page</td>
-            <td>google </td>
-            <td>$1100</td>
-          </tr>
-        </thead>
-        <tbody>
 
-        </tbody>
-        <tfoot>
-
-        </tfoot>
-
-    </table>
 </body>
 </html>
