--- a/index.html.html
+++ b/index.html.html
@@ -3,22 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pitar </title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <header>
-
-    </header>
-    <main>
-     <section>
-        <form action="name">
-<input type="text" placeholder="enter your name">
-        </form>
-     </section>
-    </main>
-   <footer>
-
-   </footer>
+    
 </body>
 </html>
